# PeriodicExecutor

./: .gitignore  CMakeLists.txt  LICENSE  Periodic-Timers-using-Boost.IO.md  README.md  doxygen.conf  main.cpp
.github/workflows/: ci.yml
examples/: benchmark.cpp  example_PE01.cpp
include/: PeriodicExecutor.hpp
tests/: PeriodicExecutorTests.cpp
